--- a/style.css
+++ b/style.css
@@ -270,7 +270,7 @@ img {
   align-items: center;
   text-align: center;
   width: 100%;
-  height: 80vh;
+  height: 10%;
   padding: 0 2rem;
   background: var(--main-black);
 }
