--- a/style.css
+++ b/style.css
@@ -6,6 +6,25 @@
   --main-gray: #303841;
   --main-black: #1D1E18;
 }
+.welcome-section p {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.2rem;
+  line-height: 1.5;
+  margin-top: 1rem;
+  color: #555;
+}
+
+.welcome-section p {
+  
+  
+  text-align: center;
+  margin: 30px auto;
+  max-width: 600px;
+  font-size: 18px;
+  line-height: 1.5;
+  }
+  
+  
 
 /* Base reset */
 * {
